--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,9 @@
-
 {
-    "require": {
-        "tecnickcom/tc-lib-pdf": "dev-master"
+	"require": {
+        "tecnickcom/tc-lib-pdf": "dev-master",
+        "automattic/woocommerce": "^3.0",
+        "phpoffice/phpspreadsheet": "^1.6",
+        "phpmailer/phpmailer": "^6.0"
     },
     "repositories": [
         {
@@ -10,3 +12,4 @@
         }
     ]
 }
+
